fix: update scrollbar style

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,8 +26,8 @@
 
   /* Scrollbar */
   overflow-y: scroll;
-  scrollbar-color: var(--color-700) transparent;
-  scrollbar-width: thin;
+  scrollbar-color: var(--color-500) transparent;
+  /* scrollbar-width: thin; */
 }
 
 :root[data-theme="dark"] {
@@ -44,7 +44,7 @@
   background: var(--color-100);
 }
 ::-webkit-scrollbar-thumb {
-  background-color: var(--color-700);
+  background-color: var(--color-500);
 }
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--color-700);
